K8s/deployment.yml
---
  kind: Deployment
  apiVersion: extensions/v1beta1
  metadata:
    name: sentry
    namespace: dolittle
  spec:
    template:
      metadata:
        labels:
          app: sentry
          name: sentry
      spec:
        containers:
        - name: styles
          image: dolittle/sentry
          imagePullPolicy: Always
          ports:
          - containerPort: 80
