K8s/service.yml
---
  apiVersion: v1
  kind: Service
  metadata:
    name: sentry
    namespace: dolittle
    labels:
      app: sentry
  spec:
    ports:
    - port: 80
      targetPort: 80
      name: sentry-port
      protocol: TCP
    selector:
      app: sentry
      name: sentry
