K8s/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sentry
  namespace: dolittle
spec:
  tls:
  - hosts:
    - dolittle.online
    secretName: dolittle-online-secret
  rules:
  - host: dolittle.online
    http:
      paths:
      - path: /
        backend:
          serviceName: sentry
          servicePort: 80
